fix spacing between tables

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -13,6 +13,7 @@ body,
 
 .table-container {
   margin-top: 25px;
+  margin-bottom: 25px;
   height: 100%;
 }
 
